Changed first paragraph

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <title>Všechno v cloudu</title>
 </head>
 <h1><b>Všechno<br />v&nbsp;cloudu</b></h1>
-<p>Pomáhám s výběrem cloud providera, vývojářských nástrojů a s designem pipeline.<br />Nabízím 5 let zkušeností s vývojem softwaru pro malé firmy i velké enterprise společnosti.</p>
-<p>Můj zákazník je někdo, kdo umí naprogramovat business logiku, ale neumí ji provozovat, případně ji provozuje blbě. Důvody se liší.</p>
+<p>Pomáhám s výběrem cloud providera, vývojářských nástrojů a s designem pipeline. Nabízím 5 let zkušeností s vývojem softwaru pro malé firmy i velké enterprise společnosti.</p>
+<p>Moji zákazníci jsou ti, kteří umí naprogramovat business logiku, ale neumí ji provozovat, případně ji provozují neefektivně. Důvody se liší:</p>
 <ul>
 <li>v malých firmách chybí rozpočet</li>
 <li>ve středních firmách chybí znalosti</li>
-<li>v těch velkých chybí vize</li>
+<li>v těch velkých chybí vize.</li>
 </ul>
-<p>Moje role je „Jack of all trades“, umím od každého trochu, orientuji se v&nbsp;komplexním tématu technologií a nasměruji lidi správným směrem.</p>
+<p>Moje role je „Jack of all trades“, umím od každého trochu, orientuji se v&nbsp;komplexním tématu technologií a nasměruji Vás správným směrem.</p>
 
 <h1>Nabízím<br />konzultace</h1>
 <ul>
