--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 <li>ve středních firmách chybí znalosti</li>
 <li>v těch velkých chybí vize.</li>
 </ul>
-<p>Moje role je „Jack of all trades“, umím od každého trochu, orientuji se v&nbsp;komplexním tématu technologií a nasměruji Vás správným směrem.</p>
+<p>Moje role je <i>Jack of all trades</i>, umím od každého trochu, orientuji se v&nbsp;komplexním tématu technologií a nasměruji Vás správným směrem.</p>
 
-<h1>Nabízím<br />konzultace</h1>
+<h1>Nabízím<br />podporu</h1>
 <ul>
-<li>O možných cestách do cloudu i zpátky, zasvěcení do základní terminologie a&nbsp;principů automatizace.</li>
-<li>Návrh Vaší budoucí pipeline s využitím open source nástrojů s minimální cenou pro&nbsp;snadnýrozjezd.</li>
+<li>Konzultace o možných cestách do cloudu i zpět, zasvěcení do základní terminologie a&nbsp;principů automatizace.</li>
+<li>Návrh Vaší budoucí pipeline s využitím open source nástrojů s minimální cenou pro&nbsp;snadný rozjezd.</li>
 <li>Optimalizace stávajících procesů, ceny provozu a monitoringu existujícího&nbsp;produktu.</li>
 <li>Návrh cloudové migrace existujících produktů a zvýšení podílu&nbsp;automatizace.</li>
 <li>Školení developerů, operations v místě Vaší společnosti.</li>
