--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 <li>Možnost osvěty pro management či netechnické publikum.</li>
 </ul>
 
-<h1>Ukázky<br />práce</h1>
+<h1>Ukázky<br />prací</h1>
 
 <h3>Kubernetes cluster + deployment služeb v Google&nbsp;Cloud&nbsp;Platform</h3>
-<p>Založení Kubernetes clusteru pomocí Terraformu, jeden cluster per projekt / prostředí. Založení a správa zdockerované aplikace pomocí Terraformu a deployment do libovolného prostředí. <i>(Terraform, GitlabCI, Google Container Service)</i></p>
+<p>Založení Kubernetes clusteru pomocí Terraformu, jeden cluster per projekt / prostředí. Založení a správa zdockerované aplikace pomocí Terraformu a&nbsp;deployment do libovolného prostředí. <i>(Terraform, GitlabCI, Google Container Service)</i></p>
 <!-- <a href="https://github.com/vsechnovcloudu/k8s.deployment"><img src="src/img/terraformkubernetesgitlab.gif" width="1257" alt="animated gif showing gitlab ci" /></a> -->
 <p><a href="https://github.com/vsechnovcloudu/gcp.gkeHelmDemo"><i class="fab fa-github"></i> GitHub – infrastructure</a><br /><a href="https://github.com/vsechnovcloudu/k8s.deployment"><i class="fab fa-github"></i> GitHub – service</a></p>
 
@@ -58,7 +58,7 @@
 
 <h1>Kontakt</h1>
 
-<p><a href="mailto:david.kubec@vsechnovcloudu.cz"><i class="fas fa-envelope"></i> david.kubec@vsechnovcloudu.cz</a><br />&& || +420 731 128 030<br /><a href="https://github.com/vsechnovcloudu"><i class="fab fa-github"></i> GitHub</a> | <a href="https://www.linkedin.com/company/vsechnovcloudu"><i class="fab fa-linkedin"></i> LinkedIN</a> | <a href="https://www.facebook.com/vsechnovcloudu/"><i class="fab fa-facebook"></i> Facebook</a></p>
+<p><a href="mailto:david.kubec@vsechnovcloudu.cz"><i class="fas fa-envelope"></i> david.kubec@vsechnovcloudu.cz</a><br />&& || +420731128030<br /><a href="https://github.com/vsechnovcloudu"><i class="fab fa-github"></i> GitHub</a> | <a href="https://www.linkedin.com/company/vsechnovcloudu"><i class="fab fa-linkedin"></i> LinkedIN</a> | <a href="https://www.facebook.com/vsechnovcloudu/"><i class="fab fa-facebook"></i> Facebook</a></p>
 <img src="src/img/vvc-title.jpg" alt="title"/>
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
