--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <h1>Kontakt</h1>
 
-<p><a href="mailto:david.kubec@vsechnovcloudu.cz"><i class="fas fa-envelope"></i> david.kubec@vsechnovcloudu.cz</a><br />&& || +420731128030<br /><a href="https://github.com/vsechnovcloudu"><i class="fab fa-github"></i> GitHub</a> | <a href="https://www.linkedin.com/company/vsechnovcloudu"><i class="fab fa-linkedin"></i> LinkedIN</a> | <a href="https://www.facebook.com/vsechnovcloudu/"><i class="fab fa-facebook"></i> Facebook</a></p>
+<center><p><a href="mailto:david.kubec@vsechnovcloudu.cz"><i class="fas fa-envelope"></i> david.kubec@vsechnovcloudu.cz</a><br />&& || +420731128030<br /><br /><a href="https://github.com/vsechnovcloudu"><i class="fab fa-github"></i> GitHub</a> | <a href="https://www.linkedin.com/company/vsechnovcloudu"><i class="fab fa-linkedin"></i> LinkedIN</a> | <a href="https://www.facebook.com/vsechnovcloudu/"><i class="fab fa-facebook"></i> Facebook</a></p></center>
 <img src="src/img/vvc-title.jpg" alt="title"/>
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
