--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <h3>Živé vystoupení<br />na AWS Summit 2019 v Berlíně</h3>
 <p>Prezentace Slack integrace umožňující privilegovaný přístup do strojů bez povoleného SSH (typicky produkční systémy) v AWS i mimo něj. <i>(Terraform, Jenkins, NodeJS, AWS Lambda, AWS API Gateway, DynamoDB, AWS IAM, AWS SSM, AWS Cloudwatch)</i></p>
-<p><a href=https://www.youtube.com/embed/0J0xIScmn20""><i class="fab fa-youtube"></i> Youtube</a></p>
+<p><a href="https://www.youtube.com/embed/0J0xIScmn20"><i class="fab fa-youtube"></i> Youtube</a></p>
 
 <h1>Kontakt</h1>
 
